test-po.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: test
  name: test
  namespace: keycloak
spec:
  containers:
  - args:
    - "100000"
    command:
    - sleep
    image: katonic/nb-isolation:optimistic-1.3-with-minio-try
    imagePullPolicy: IfNotPresent
    name: test
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  imagePullSecrets:
  - name: docker-hub-secret
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: cronjob
  serviceAccountName: cronjob
  terminationGracePeriodSeconds: 30
