istio-example.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myblog-gateway
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myblog
spec:
  hosts: 
  - fakeblog.com
  gateways:
  - myblog-gateway
  http:
  - match:
    - uri:
        prefix: /myblog
    rewrite: 
      uri: /    # rewrite the URI path to route to the root of the my-blog service
    route:
    - destination:
        port:
          number: 80
        host: myblog
---
apiVersion: v1
kind: Service
metadata:
  name: myblog
  labels:
    app: myblog
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: myblog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myblog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myblog
      version: v1
  template:
    metadata:
      labels:
        app: myblog
        version: v1
    spec:
      containers:
      - image: gnovack/my-blog:v1
        imagePullPolicy: IfNotPresent
        name: myblog
        ports:
        - containerPort: 80
